popover: Fix alignment of edit and delete button.
The icons were misaligned with the time stamp.  

I changed the CSS `right` property to get proper alignment.

Fixes: #20529.

--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -109,7 +109,7 @@
             display: inline-block;
             position: absolute;
             top: 9px;
-            right: -80px;
+            right: -103px;
             font-size: 0.9em;
 
             @media (width < $sm_min) {
